# baracuda

./: .gitignore  .publish-remaining.sh  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LESSONS.md  LICENSE-APACHE  LICENSE-MIT  OP-MATRIX.md  README.md  ROADMAP.md  baracuda.code-workspace  publish_alpha39.ps1  publish_alpha42_retry.ps1  publish_alpha43.ps1  publish_alpha44_retry.ps1  publish_alpha45.ps1  publish_alpha46_retry.ps1  publish_alpha49_retry.ps1  publish_alpha50.ps1  publish_alpha50_retry.ps1  publish_alpha52_retry.ps1  publish_alpha53.ps1  publish_alpha54_retry.ps1  publish_alpha58.ps1  publish_alpha58_retry.ps1  publish_alpha59_retry.ps1  publish_alpha60.ps1  publish_alpha60_retry.ps1  publish_alpha62_retry.ps1  publish_alpha63.ps1  publish_alpha63_retry.ps1  publish_alpha64.ps1  publish_alpha64_retry.ps1  publish_alpha65.ps1  publish_alpha65_retry.ps1  publish_alpha66.ps1  publish_alpha66_retry.ps1  (+6 more)
crates/baracuda-build/: Cargo.toml  README.md
crates/baracuda-build/src/: lib.rs
crates/baracuda-core/: Cargo.toml  README.md
crates/baracuda-core/src/: error.rs  lib.rs  loader.rs  platform.rs  stream_mode.rs
crates/baracuda-core/tests/: error_plumbing.rs
crates/baracuda-cublas/: Cargo.toml  README.md
crates/baracuda-cublas/examples/: gemm.rs
crates/baracuda-cublas/src/: batched.rs  blas_scalar.rs  direct_batched.rs  error.rs  ex.rs  handle.rs  level1.rs  level2.rs  level3.rs  lib.rs  lt.rs  xt.rs
crates/baracuda-cublas/tests/: gpu_smoke.rs  level1_smoke.rs
crates/baracuda-cuda-sys/: Cargo.toml  README.md  build.rs
crates/baracuda-cuda-sys/src/: driver.rs  functions.rs  lib.rs  status.rs  types.rs
crates/baracuda-cudf/: Cargo.toml  README.md
crates/baracuda-cudf/src/: lib.rs
crates/baracuda-cudf/tests/: cudf_smoke.rs
crates/baracuda-cudnn/: Cargo.toml  README.md
crates/baracuda-cudnn/examples/: conv2d.rs
crates/baracuda-cudnn/src/: lib.rs
crates/baracuda-cudnn/tests/: gpu_smoke.rs
crates/baracuda-cufft-sys/: Cargo.toml  README.md  build.rs
crates/baracuda-cufft-sys/src/: lib.rs
crates/baracuda-cufile/: Cargo.toml  README.md
crates/baracuda-cufile-sys/: Cargo.toml  README.md
crates/baracuda-cufile-sys/src/: lib.rs
crates/baracuda-cufile/src/: lib.rs
crates/baracuda-cufile/tests/: gpu_smoke.rs  read_write.rs
crates/baracuda-cupti/: Cargo.toml  README.md
crates/baracuda-cupti-sys/: Cargo.toml  README.md
crates/baracuda-cupti-sys/src/: lib.rs
crates/baracuda-cupti/src/: lib.rs
crates/baracuda-cupti/tests/: gpu_smoke.rs
crates/baracuda-curand-sys/: Cargo.toml  README.md  build.rs
crates/baracuda-curand-sys/src/: lib.rs
crates/baracuda-cusolver/: Cargo.toml  README.md
crates/baracuda-cusolver/examples/: qr.rs
crates/baracuda-cusolver/src/: lib.rs
crates/baracuda-cusolver/tests/: gpu_smoke.rs
crates/baracuda-cutensor-sys/: Cargo.toml  README.md
crates/baracuda-cutensor-sys/src/: lib.rs
crates/baracuda-cutlass/: Cargo.toml  NOTICE  README.md
crates/baracuda-cutlass-kernels-sys/: Cargo.toml  NOTICE  README.md  build.rs
crates/baracuda-cutlass-kernels-sys/kernels/: gemm_batched_rcr_sm80.cu  gemm_f32_simt_rcr_sm80.cu  gemm_f32_simt_rcr_sm80_bias.cu  gemm_f32_simt_rrr_sm80.cu  gemm_f32_simt_rrr_sm80_bias.cu  gemm_f64_rcr_sm80.cu  gemm_f64_rcr_sm80_bias.cu  gemm_f64_rrr_sm80.cu  gemm_f64_rrr_sm80_bias.cu  gemm_rcr_sm80.cu  gemm_rcr_sm80_bias.cu  gemm_rrr_sm80.cu  gemm_rrr_sm80_bias.cu  gemm_s8_rcr_sm80.cu  gemm_s8_rcr_sm80_bias.cu  gemm_s8_rrr_sm80.cu  gemm_s8_rrr_sm80_bias.cu  gemm_tf32_rcr_sm80.cu  gemm_tf32_rcr_sm80_bias.cu  gemm_tf32_rrr_sm80.cu  gemm_tf32_rrr_sm80_bias.cu  gemm_u8_rcr_sm80.cu  gemm_u8_rcr_sm80_bias.cu  gemm_u8_rrr_sm80.cu  gemm_u8_rrr_sm80_bias.cu  grouped_gemm_rcr_sm80.cu
crates/baracuda-cutlass-kernels-sys/src/: lib.rs
crates/baracuda-cutlass-sys/: Cargo.toml  NOTICE  README.md  build.rs
crates/baracuda-cutlass-sys/src/: lib.rs
crates/baracuda-cutlass/src/: error.rs  lib.rs  plan.rs  types.rs
crates/baracuda-cutlass/tests/: bias_act_smoke.rs  bias_gemm_smoke.rs  bias_rrr_smoke.rs  bias_tf32_smoke.rs  capture_replay_smoke.rs  cublas_backend_smoke.rs  f32_strict_smoke.rs  f64_smoke.rs  gemm_alpha9_smoke.rs  gemm_smoke.rs  grouped_gemm_smoke.rs  int8_rrr_smoke.rs  int8_smoke.rs  tf32_rrr_smoke.rs
crates/baracuda-cuvs/: Cargo.toml  README.md
crates/baracuda-cuvs-sys/: Cargo.toml  README.md  build.rs
crates/baracuda-cuvs-sys/src/: lib.rs
crates/baracuda-cuvs/src/: lib.rs
crates/baracuda-cuvs/tests/: smoke.rs
crates/baracuda-cvcuda/: Cargo.toml  README.md
crates/baracuda-cvcuda-sys/: Cargo.toml  README.md
crates/baracuda-cvcuda-sys/src/: lib.rs
crates/baracuda-cvcuda/src/: lib.rs
crates/baracuda-cvcuda/tests/: gpu_smoke.rs  resize.rs
crates/baracuda-driver/: Cargo.toml  README.md
crates/baracuda-driver/examples/: launch_kernel.rs
crates/baracuda-driver/src/: array.rs  context.rs  coredump.rs  device.rs  error.rs  event.rs  external.rs  graph.rs  graphics.rs  green.rs  init.rs  ipc.rs  launch.rs  launch_attr.rs  lib.rs  library.rs  memcpy2d.rs  memcpy3d.rs  memory.rs  mempool.rs  module.rs  multicast.rs  occupancy.rs  pinned.rs  pointer.rs  profiler.rs  stream.rs  tensor_map.rs  user_object.rs  vmm.rs
crates/baracuda-driver/tests/: gpu_smoke.rs  graph_smoke.rs  wave10_smoke.rs  wave11_smoke.rs  wave12_smoke.rs  wave13_smoke.rs  wave14_smoke.rs  wave15_smoke.rs  wave16_smoke.rs  wave17_smoke.rs  wave18_smoke.rs  wave19_smoke.rs  wave1_smoke.rs  wave20_smoke.rs  wave21_smoke.rs  wave22_smoke.rs  (+18 more)
crates/baracuda-flashinfer/: Cargo.toml  README.md
crates/baracuda-flashinfer-sys/: Cargo.toml  README.md
crates/baracuda-forge/: Cargo.toml  NOTICE  README.md
crates/baracuda-kernelgen/: Cargo.toml
crates/baracuda-kernels-bench/: BENCH-sm89.md  BENCHMARKS.md  Cargo.toml  README.md  build.rs
examples/: Cargo.toml  build.rs  cufile_gds_copy.rs  cutensor_matmul.rs  cutlass_gemm.rs  cvcuda_resize_pipeline.rs  forge_hello.rs  nvcomp_lz4_roundtrip.rs
examples/kernels/: forge_hello.cu
xtask/: Cargo.toml
xtask/src/: main.rs
(+1694 files in other folders)
