[package]
name = "xtask"
version = "0.0.0"
description = "Workspace task runner for baracuda (binding regeneration, kernel compilation, release helpers). Not published."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
baracuda-build = { workspace = true, features = ["bindgen"] }
