[package]
name = "baracuda-build"
version = "0.0.1-alpha.3"
description = "Shared build.rs helpers for baracuda -sys crates (CUDA detection, bindgen configuration)."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["development-tools::build-utils"]

[dependencies]
bindgen = { workspace = true, optional = true }

[features]
default = []
bindgen = ["dep:bindgen"]
