[package]
name = "baracuda-cuda-sys"
version = "0.0.1-alpha.1"
description = "Raw FFI bindings and dynamic loader for the CUDA Driver and Runtime APIs (libcuda / libcudart)."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["external-ffi-bindings"]

[features]
default = []
bindgen = ["baracuda-build/bindgen"]
static-link = []

[dependencies]
baracuda-core.workspace = true
baracuda-types.workspace = true
libloading.workspace = true

[build-dependencies]
baracuda-build.workspace = true
