[package]
name = "baracuda-cufile-sys"
version = "0.0.1-alpha.4"
description = "Raw FFI bindings and dynamic loader for NVIDIA cuFile (GPUDirect Storage, Linux-only)."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["external-ffi-bindings"]

[dependencies]
baracuda-core.workspace = true
baracuda-types.workspace = true
libloading.workspace = true
