[package]
name = "baracuda-cupti-sys"
version = "0.0.1-alpha.3"
description = "Raw FFI bindings and dynamic loader for CUPTI (CUDA Profiling Tools Interface)."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["external-ffi-bindings"]

[dependencies]
baracuda-core.workspace = true
baracuda-types.workspace = true
libloading.workspace = true
