[package]
name = "baracuda-cupti"
version = "0.0.1-alpha.2"
description = "Safe Rust wrappers for CUPTI. Scaffolding at v0.1."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
baracuda-types.workspace = true
baracuda-core.workspace = true
baracuda-cupti-sys.workspace = true
thiserror.workspace = true
