[package]
name = "baracuda-cusolver"
version = "0.0.1-alpha.3"
description = "Safe Rust wrappers for NVIDIA cuSOLVER (dense LU factorization at v0.1)."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
baracuda-types.workspace = true
baracuda-core.workspace = true
baracuda-cuda-sys.workspace = true
baracuda-cusolver-sys.workspace = true
baracuda-driver.workspace = true
thiserror.workspace = true
