[package]
name = "baracuda-cutensor-sys"
version = "0.0.1-alpha.1"
description = "Raw FFI bindings and dynamic loader for NVIDIA cuTENSOR (tensor contraction)."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["external-ffi-bindings"]

[dependencies]
baracuda-core.workspace = true
baracuda-types.workspace = true
libloading.workspace = true
