[package]
name = "baracuda-cuvs"
version = "0.0.1-alpha.66"
description = "Safe Rust wrappers for NVIDIA cuVS (GPU vector search / approximate nearest neighbours)."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
# Compile the safe cuVS API. Off by default for the same reason as the
# `-sys` crate: cuVS ships only with NVIDIA RAPIDS (Linux / WSL2). Enabling
# this transitively enables `baracuda-cuvs-sys/cuvs`.
cuvs = ["baracuda-cuvs-sys/cuvs"]
# Opt-in `f16` (half-precision) vector support. Pulls in the `half` crate and
# `baracuda-types/half-crate` so `DeviceRepr` is in place on `half::f16`.
half-crate = ["dep:half", "baracuda-types/half-crate"]

[dependencies]
baracuda-types.workspace = true
baracuda-core.workspace = true
baracuda-cuda-sys.workspace = true
baracuda-cuvs-sys.workspace = true
baracuda-driver.workspace = true
thiserror.workspace = true
half = { workspace = true, optional = true }

[lints]
workspace = true
