[package]
name = "baracuda-cvcuda"
version = "0.0.1-alpha.4"
description = "Safe Rust wrappers for NVIDIA CV-CUDA. Scaffolding at v0.1."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
baracuda-types.workspace = true
baracuda-core.workspace = true
baracuda-cvcuda-sys.workspace = true
thiserror.workspace = true

[dev-dependencies]
baracuda-runtime.workspace = true
