[package]
name = "baracuda-flashinfer-sys"
version = "0.0.1-alpha.63"
description = "Raw C-ABI FFI surface for the vendored FlashInfer inference kernels (paged-KV decode, paged-KV append, cascade state merge, sort-free sampling). The launcher shims + vendored FlashInfer sources are compiled by `baracuda-kernels-sys`; this crate is a thin re-export facade so the FlashInfer C-ABI is reachable under its own crate name. Apache-2.0 (FlashInfer upstream) — see `crates/baracuda-kernels-sys/vendor/flashinfer/`."
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["cuda", "flashinfer", "attention", "paged", "ffi"]
categories = ["external-ffi-bindings"]

[features]
default = []
# Re-export the FlashInfer C-ABI symbols. Pulls in
# `baracuda-kernels-sys/flashinfer`, which compiles the vendored
# FlashInfer launcher `.cu` shims via nvcc. OFF by default — the
# vendored kernels are an opt-in serving dependency.
flashinfer = ["baracuda-kernels-sys/flashinfer"]

[dependencies]
baracuda-kernels-sys.workspace = true

[lints]
workspace = true
