[package]
name = "baracuda-kernelgen"
version = "0.0.1-alpha.69"
description = "Build-time generator that emits specialized CUDA kernels (and, next, their FKC contracts) from an op's abstract IR fanned out across StructureKey cells. Dev/build tool — not published; its artifacts ship inside baracuda-kernels-sys."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[features]
# Pull in the real on-demand nvrtc compiler (NvrtcCompiler). Off by default so the
# synthesis engine + StubCompiler build and test without a CUDA toolchain; enable
# with `--features nvrtc` where nvrtc is available.
nvrtc = ["dep:baracuda-nvrtc"]

[dependencies]
baracuda-kernels-types = { workspace = true }
baracuda-nvrtc = { workspace = true, optional = true }

[lints]
workspace = true
