[package]
name = "baracuda-kernels-bench"
version = "0.0.1-alpha.31"
description = "Benchmark harness for baracuda-kernels — CUDA-event-timed throughput sweeps across GEMM, Flash Attention, and Conv2d at LLM-typical / ResNet-typical shapes. Phase 10 Milestone 10.1 of the baracuda CUDA stack."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["cuda", "gpu", "ml", "benchmark", "tflops"]
categories = ["api-bindings", "science"]
publish = false

[features]
# Arch features forwarded to baracuda-kernels. `sm89` enables the FP8
# GEMM benches; without it the FP8 bench-group is skipped at runtime.
default = []
sm80 = ["baracuda-kernels/sm80"]
sm89 = ["baracuda-kernels/sm89"]
sm90a = ["baracuda-kernels/sm90a"]

# cuDNN integration — gates the Conv2d bench. The Conv2d bench file
# compiles with this feature off (becomes a no-op `main`) so the bench
# binary still builds, but no work runs.
cudnn = ["baracuda-kernels/cudnn"]

[dependencies]
baracuda-kernels = { workspace = true }
baracuda-kernels-types = { workspace = true }
baracuda-driver = { workspace = true }
baracuda-cutlass = { workspace = true }
baracuda-types = { workspace = true, features = ["half-crate", "f8-crate"] }
half = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

# Criterion's `#[bench]` story requires explicit `[[bench]]` entries
# with `harness = false`. Each entry maps to one file under `benches/`.

[[bench]]
name = "gemm"
harness = false

[[bench]]
name = "flash_attention"
harness = false

[[bench]]
name = "conv2d"
harness = false

[package.metadata.docs.rs]
# This crate is a bench harness — no docs to publish. Keep the metadata
# minimal so docs.rs doesn't try to build benchmarks.
all-features = false
no-default-features = true
