[package]
name = "baracuda-kernels-bench"
version = "0.0.1-alpha.50"
description = "Benchmark harness for baracuda-kernels — CUDA-event-timed throughput sweeps across GEMM, Flash Attention, and Conv2d at LLM-typical / ResNet-typical shapes. Phase 10 Milestone 10.1 of the baracuda CUDA stack."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["cuda", "gpu", "ml", "benchmark", "tflops"]
categories = ["api-bindings", "science"]
publish = false

[features]
# Arch features forwarded to baracuda-kernels. `sm89` enables the FP8
# GEMM benches; without it the FP8 bench-group is skipped at runtime.
default = []
sm80 = ["baracuda-kernels/sm80"]
sm89 = ["baracuda-kernels/sm89"]
sm90a = ["baracuda-kernels/sm90a"]

# cuDNN integration — gates the Conv2d bench. The Conv2d bench file
# compiles with this feature off (becomes a no-op `main`) so the bench
# binary still builds, but no work runs.
cudnn = ["baracuda-kernels/cudnn"]

[dependencies]
baracuda-kernels = { workspace = true }
baracuda-kernels-types = { workspace = true }
baracuda-driver = { workspace = true }
baracuda-cutlass = { workspace = true }
baracuda-cublas = { workspace = true }
baracuda-cublas-sys = { workspace = true }
baracuda-cudnn = { workspace = true, features = ["half-crate"] }
baracuda-types = { workspace = true, features = ["half-crate", "f8-crate"] }
half = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

# Criterion's `#[bench]` story requires explicit `[[bench]]` entries
# with `harness = false`. Each entry maps to one file under `benches/`.
#
# Phase 10 (baseline): gemm / flash_attention / conv2d — baracuda-only
# self-bench groups.
# Phase 29 (cross-impl): the `*_vs_cublas` / `*_vs_cudnn` / `mmvq` /
# `softmax` / `layernorm` / `rmsnorm` / `pool` / `reductions` /
# `elementwise` benches that compare baracuda against the corresponding
# reference library (or self-bench in the no-reference case). The
# Phase 29 benches share the same harness shape as the Phase 10 ones
# and reuse `setup_device` / `time_with_events` / `warmup` from
# `baracuda_kernels_bench`.

[[bench]]
name = "gemm"
harness = false

[[bench]]
name = "flash_attention"
harness = false

[[bench]]
name = "conv2d"
harness = false

# Phase 29 cross-implementation benches.
[[bench]]
name = "gemm_vs_cublas"
harness = false

[[bench]]
name = "mmvq"
harness = false

[[bench]]
name = "softmax_vs_cudnn"
harness = false

[[bench]]
name = "layernorm_vs_cudnn"
harness = false

[[bench]]
name = "rmsnorm"
harness = false

[[bench]]
name = "conv2d_vs_cudnn"
harness = false

[[bench]]
name = "pool_vs_cudnn"
harness = false

[[bench]]
name = "reductions_vs_cudnn"
harness = false

[[bench]]
name = "elementwise"
harness = false

[[bench]]
name = "sdpa_gqa"
harness = false

[package.metadata.docs.rs]
# This crate is a bench harness — no docs to publish. Keep the metadata
# minimal so docs.rs doesn't try to build benchmarks.
all-features = false
no-default-features = true
